--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -1,20 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Supervised Machine Learning Homework - Predicting Credit Risk\n",
+    "\n",
+    "My prediction on whicnh model will perform better:\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix, classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -124,176 +139,318 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import the data"
+    "# Import the data\n",
+    "lending_data = pd.read_csv(Path('Resources/lending_data.csv'))\n",
+    "lending_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_size</th>\n",
-       "      <th>interest_rate</th>\n",
-       "      <th>borrower_income</th>\n",
-       "      <th>debt_to_income</th>\n",
-       "      <th>num_of_accounts</th>\n",
-       "      <th>derogatory_marks</th>\n",
-       "      <th>total_debt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>32815</th>\n",
-       "      <td>8200.0</td>\n",
-       "      <td>6.598</td>\n",
-       "      <td>42700</td>\n",
-       "      <td>0.297424</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59572</th>\n",
-       "      <td>10500.0</td>\n",
-       "      <td>7.591</td>\n",
-       "      <td>52000</td>\n",
-       "      <td>0.423077</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42325</th>\n",
-       "      <td>7600.0</td>\n",
-       "      <td>6.351</td>\n",
-       "      <td>40400</td>\n",
-       "      <td>0.257426</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39070</th>\n",
-       "      <td>9700.0</td>\n",
-       "      <td>7.254</td>\n",
-       "      <td>48900</td>\n",
-       "      <td>0.386503</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42524</th>\n",
-       "      <td>11800.0</td>\n",
-       "      <td>8.155</td>\n",
-       "      <td>57300</td>\n",
-       "      <td>0.476440</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
-       "32815     8200.0          6.598            42700        0.297424   \n",
-       "59572    10500.0          7.591            52000        0.423077   \n",
-       "42325     7600.0          6.351            40400        0.257426   \n",
-       "39070     9700.0          7.254            48900        0.386503   \n",
-       "42524    11800.0          8.155            57300        0.476440   \n",
-       "\n",
-       "       num_of_accounts  derogatory_marks  total_debt  \n",
-       "32815                2                 0       12700  \n",
-       "59572                4                 1       22000  \n",
-       "42325                2                 0       10400  \n",
-       "39070                4                 0       18900  \n",
-       "42524                6                 1       27300  "
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Split the data into X_train, X_test, y_train, y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9908171687990095"
+       "array([0, 1])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train a Logistic Regression model print the model score"
+    "lending_data.loan_status.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9910751134956666"
+       "False"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
+    "lending_data.isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into X_train, X_test, y_train, y_test\n",
+    "y = lending_data['loan_status'].values\n",
+    "X = lending_data.drop('loan_status', axis=1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression Training score:  0.9921240885954051\n",
+      "LogisticRegression Test score:  0.9918489475856377\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Logistic Regression model print the model score\n",
+    "logistic_classifier = LogisticRegression().fit(X_train, y_train)\n",
+    "print('LogisticRegression Training score: ' logistic_classifier.score(X_train,y_train))\n",
+    "print('LogisticRegression Test score: ', logistic_classifier.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier Training score:  0.9975409272252029\n",
+      "RandomForestClassifier Test score:  0.9914878250103177\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "RandomForest_classifier = RandomForestClassifier(random_state=1)\n",
+    "RandomForest_classifier.fit(X_train, y_train)\n",
+    "print('RandomForestClassifier Training score: ', RandomForest_classifier.score(X_train,y_train))\n",
+    "print('RandomForestClassifier Test score: ', RandomForest_classifier.score(X_test,y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale the data\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled LogisticRegression Training score:  0.9942908240473243\n",
+      "Scaled LogisticRegression Test score:  0.9936545604622369\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model on the scaled data and print the model score\n",
+    "scaled_logistic = LogisticRegression(\n",
+    "    solver='lbfgs',\n",
+    "    max_iter=100,\n",
+    "    random_state=1\n",
+    ")\n",
+    "scaled_logistic.fit(X_train_scaled, y_train)\n",
+    "print('Scaled LogisticRegression Training score: ', scaled_logistic.score(X_train_scaled, y_train))\n",
+    "print('Scaled LogisticRegression Test score: ',scaled_logistic.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaled RandomForestClassifier Training score:  0.9975409272252029\n",
+      "Scaled RandomForestClassifier Test score:  0.9915910028889806\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
+    "scaled_random_forest = RandomForestClassifier(random_state=0)\n",
+    "scaled_random_forest.fit(X_train_scaled, y_train)\n",
+    "print('Scaled RandomForestClassifier Training score: ', scaled_random_forest.score(X_train_scaled,y_train))\n",
+    "print('Scaled RandomForestClassifier Test score: ', scaled_random_forest.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Investigate further to calculate accuracy of the above results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18663,   102],\n",
+       "       [   56,   563]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a confusion matrix from the test values and predictions for the Logistic Regression model\n",
+    "y_logistic_true = y_test\n",
+    "y_logistic_pred = logistic_classifier.predict(X_test)\n",
+    "confusion_matrix(y_logistic_true, y_logistic_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression precision:  0.8466165413533835\n",
+      "Logistic Regression recall:  0.9095315024232633\n",
+      "Logistic Regression f1_scores:  0.8769470404984423\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_logistic_true,y_logistic_pred).ravel()\n",
+    "precision = tp/(tp+fp)\n",
+    "recall = tp/(tp+fn)\n",
+    "f1_score= 2 * precision * recall / (precision + recall)\n",
+    "print(f'Logistic Regression precision: ', precision)\n",
+    "print(f'Logistic Regression recall: ', recall)\n",
+    "print(f'Logistic Regression f1_scores: ', f1_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18666,    99],\n",
+       "       [   66,   553]])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a confusion matrix from the test values and predictions for the Random Forest Classifier model\n",
+    "y_random_true = y_test\n",
+    "y_random_pred = RandomForest_classifier.predict(X_test)\n",
+    "confusion_matrix(y_random_true, y_random_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest precision:  0.848159509202454\n",
+      "Random Forest precision recall:  0.8933764135702746\n",
+      "Random Forest precision f1_score:  0.8701809598741148\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_random_true, y_random_pred).ravel()\n",
+    "precision = tp/(tp+fp)\n",
+    "recall = tp/(tp+fn)\n",
+    "f1_score= 2 * precision * recall / (precision + recall)\n",
+    "print(f'Random Forest precision: ',precision)\n",
+    "print(f'Random Forest precision recall: ',recall)\n",
+    "print(f'Random Forest precision f1_score: ',f1_score)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -305,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
