Update Credit Risk Evaluator.ipynb

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "False"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "array([0, 1])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -240,13 +240,13 @@
    "source": [
     "# Train a Logistic Regression model print the model score\n",
     "logistic_classifier = LogisticRegression().fit(X_train, y_train)\n",
-    "print('LogisticRegression Training score: ' logistic_classifier.score(X_train,y_train))\n",
-    "print('LogisticRegression Test score: ', logistic_classifier.score(X_test, y_test))"
+    "print(\"LogisticRegression Training score: \", logistic_classifier.score(X_train,y_train))\n",
+    "print(\"LogisticRegression Test score: \", logistic_classifier.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "       [   56,   563]])"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression precision:  0.8466165413533835\n",
-      "Logistic Regression recall:  0.9095315024232633\n",
-      "Logistic Regression f1_scores:  0.8769470404984423\n"
+      "Logistic Regression precision: 0.8466165413533835\n",
+      "Logistic Regression recall: 0.9095315024232633\n",
+      "Logistic Regression f1_scores: 0.8769470404984423\n"
      ]
     }
    ],
@@ -384,9 +384,9 @@
     "precision = tp/(tp+fp)\n",
     "recall = tp/(tp+fn)\n",
     "f1_score= 2 * precision * recall / (precision + recall)\n",
-    "print(f'Logistic Regression precision: ', precision)\n",
-    "print(f'Logistic Regression recall: ', recall)\n",
-    "print(f'Logistic Regression f1_scores: ', f1_score)"
+    "print(f'Logistic Regression precision: {precision}')\n",
+    "print(f'Logistic Regression recall: {recall}')\n",
+    "print(f'Logistic Regression f1_scores: {f1_score}')"
    ]
   },
   {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "       [   66,   553]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,16 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest precision:  0.848159509202454\n",
-      "Random Forest precision recall:  0.8933764135702746\n",
-      "Random Forest precision f1_score:  0.8701809598741148\n"
+      "Random Forest precision: 0.848159509202454\n",
+      "Random Forest recall: 0.8933764135702746\n",
+      "Random Forest precision f1_score: 0.8701809598741148\n"
      ]
     }
    ],
@@ -440,10 +440,77 @@
     "precision = tp/(tp+fp)\n",
     "recall = tp/(tp+fn)\n",
     "f1_score= 2 * precision * recall / (precision + recall)\n",
-    "print(f'Random Forest precision: ',precision)\n",
-    "print(f'Random Forest precision recall: ',recall)\n",
-    "print(f'Random Forest precision f1_score: ',f1_score)"
+    "print(f'Random Forest precision: {precision}')\n",
+    "print(f'Random Forest recall: {recall}')\n",
+    "print(f'Random Forest precision f1_score: {f1_score}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### You can get the scores above by doing the classification report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.85      0.91      0.88       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.95      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression Test data classification report\n",
+    "print(classification_report(y_logistic_true, y_logistic_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.85      0.89      0.87       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.94      0.93     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random Forest Classifier Test data classification report\n",
+    "\n",
+    "print(classification_report(y_random_true, y_random_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
