Update Credit Risk Evaluator.ipynb

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,14 +239,14 @@
    ],
    "source": [
     "# Train a Logistic Regression model print the model score\n",
-    "logistic_classifier = LogisticRegression().fit(X_train, y_train)\n",
-    "print(\"LogisticRegression Training score: \", logistic_classifier.score(X_train,y_train))\n",
-    "print(\"LogisticRegression Test score: \", logistic_classifier.score(X_test, y_test))"
+    "logistic_regression = LogisticRegression().fit(X_train, y_train)\n",
+    "print('LogisticRegression Training score: ', logistic_regression.score(X_train,y_train))\n",
+    "print('LogisticRegression Test score: ', logistic_regression.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -352,21 +352,21 @@
        "       [   56,   563]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a confusion matrix from the test values and predictions for the Logistic Regression model\n",
-    "y_logistic_true = y_test\n",
-    "y_logistic_pred = logistic_classifier.predict(X_test)\n",
-    "confusion_matrix(y_logistic_true, y_logistic_pred)"
+    "y_true = y_test\n",
+    "y_logistic_pred = logistic_regression.predict(X_test)\n",
+    "confusion_matrix(y_true, y_logistic_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
     }
    ],
    "source": [
-    "tn, fp, fn, tp = confusion_matrix(y_logistic_true,y_logistic_pred).ravel()\n",
+    "tn, fp, fn, tp = confusion_matrix(y_true,y_logistic_pred).ravel()\n",
     "precision = tp/(tp+fp)\n",
     "recall = tp/(tp+fn)\n",
     "f1_score= 2 * precision * recall / (precision + recall)\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -408,21 +408,21 @@
        "       [   66,   553]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a confusion matrix from the test values and predictions for the Random Forest Classifier model\n",
-    "y_random_true = y_test\n",
+    "y_true = y_test\n",
     "y_random_pred = RandomForest_classifier.predict(X_test)\n",
-    "confusion_matrix(y_random_true, y_random_pred)"
+    "confusion_matrix(y_true, y_random_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "tn, fp, fn, tp = confusion_matrix(y_random_true, y_random_pred).ravel()\n",
+    "tn, fp, fn, tp = confusion_matrix(y_true, y_random_pred).ravel()\n",
     "precision = tp/(tp+fp)\n",
     "recall = tp/(tp+fn)\n",
     "f1_score= 2 * precision * recall / (precision + recall)\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +475,12 @@
    ],
    "source": [
     "# Logistic Regression Test data classification report\n",
-    "print(classification_report(y_logistic_true, y_logistic_pred))"
+    "print(classification_report(y_true, y_logistic_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -501,16 +501,52 @@
    ],
    "source": [
     "# Random Forest Classifier Test data classification report\n",
-    "\n",
-    "print(classification_report(y_random_true, y_random_pred))"
+    "print(classification_report(y_true, y_random_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[74657,   379],\n",
+       "       [  237,  2263]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix for  whole dataset, both test and train data on the Logistic Regression\n",
+    "confusion_matrix(y, logistic_regression.predict(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[74821,   215],\n",
+       "       [   93,  2407]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix for  whole dataset, both test and train data on the Random Tree Classifier\n",
+    "confusion_matrix(y, RandomForest_classifier.predict(X))"
+   ]
   }
  ],
  "metadata": {
